--- a/resources/less/tinyplugin.less
+++ b/resources/less/tinyplugin.less
@@ -117,8 +117,8 @@
             
                     .remove {
                         position: absolute;
-                        width: 20px;
-                        height: 20px;
+                        width: 40px;
+                        height: 40px;
                         top: 0;
                         right: 0;
                         display: flex;
@@ -130,6 +130,7 @@
                         opacity: 0;
                         transition: opacity ease-in 0.3s;
                         cursor: pointer;
+                        z-index: 10;
                     }
                 }
 
