--- a/resources/less/tinyplugin.less
+++ b/resources/less/tinyplugin.less
@@ -2,6 +2,11 @@
 
 .tinymce-imagelibrary-dialog {
 
+    .tox-dialog__title {
+        font-weight: 600;
+        color: #1890ff;
+    }
+
     & :not(svg):not(rect) {
         background: initial;
         border: initial;
