fix dialog title link styling

--- a/resources/less/tinyplugin.less
+++ b/resources/less/tinyplugin.less
@@ -3,8 +3,11 @@
 .tinymce-imagelibrary-dialog {
 
     .tox-dialog__title {
-        font-weight: 600;
-        color: #1890ff;
+        a {
+            font-weight: 600;
+            color: #1890ff;
+            cursor: pointer;
+        }
     }
 
     & :not(svg):not(rect) {
